--- a/client/src/less/index.less
+++ b/client/src/less/index.less
@@ -15,17 +15,22 @@ body {
 }
 
 .container {
+  width: 100%;
   background-color: white;
   max-width:800px;
   margin: 0 auto;
 }
 
-
-.message-col {
+.send-message, .message-feed {
+  width:100%;
   max-width: 500px;
   border: solid 1px lightgray;
   padding: 30px;
   border-radius: 25px;
+  margin-bottom:30px;
+}
+.StripeElement {
+  margin-bottom:10px;
 }
 .justify-content-center {
   -webkit-box-pack: center !important;
